--- a/ch2/02_04/begin/index.html
+++ b/ch2/02_04/begin/index.html
@@ -13,12 +13,12 @@
             <form method="post" action="">
                 <div>
                     <label for="name">Name: </label>
-                    <input v-model="deckName" type="text" id="name" name="name"> ({{ deckName.length }} characters)
+                    <input v-model.trim="deckName" type="text" id="name" name="name"> ({{ deckName.length }} characters)
                 </div>
 
                 <div>
                     <label for="description">Description: </label>
-                    <textarea v-model="deckDescription" id="description" name="description"></textarea>
+                    <textarea v-model.lazy="deckDescription" id="description" name="description"></textarea>
                     ({{ 200 - deckDescription.length }} left)
                 </div>
 
@@ -64,7 +64,7 @@
                     </select>
                 </div>
 
-                <button type="submit">Create</button>
+                <button @click.prevent="submit" type="submit">Create</button>
             </form>
         </div>
 
@@ -79,6 +79,11 @@
                         leech: 'tag',
                         categoryId: ''
                     };
+                },
+                methods: {
+                    submit() {
+                        alert('sumitted');
+                    }
                 }
             };
 
