rendering styles with logic

--- a/ch3/03_02/begin/index.html
+++ b/ch3/03_02/begin/index.html
@@ -10,8 +10,9 @@
             <h1 v-text="deckName"></h1>
 
             <div @click="flipped = !flipped" class="card">
-                <h2 v-if="!flipped" v-text="front"></h2>
-                <div v-else v-html="back"></div>
+                <h2 v-cloak v-show="!flipped">{{front}}</h2>
+                <!-- <h2 v-show="!flipped" v-text="front"></h2> -->
+                <div v-show="flipped" v-html="back"></div>
             </div>
 
             <div class="navigation">
@@ -49,6 +50,7 @@
                         return this.cards[this.index].front;
                     },
                     back() {
+                        for(i = 0; i < 100000000; i++) {};
                         return this.cards[this.index].back;
                     }
                 }
