--- a/ch3/03_04/begin/index.html
+++ b/ch3/03_04/begin/index.html
@@ -10,12 +10,17 @@
         <div id="app" v-cloak>
             <h1>Card Manager</h1>
 
-            <div v-for="(card, index) in cards" class="card-pair">
-                <div v-if="editIndex == index" class="card">
-                    <textarea @keydown.enter="editIndex = -1" v-model="card.front"></textarea>
+            <div :style="textSizeControls">
+                Text Size: <span :style="{fontSize: '50px'}" @click="fontSize++" >+</span> or spacing: <span :style="{fontSize: '50px'}" @click="fontSize--">-</span> 
+            </div>
+            <div :style="{fontSize: fontSize + 'px'}">
+                <div v-for="(card, index) in cards" class="card-pair">
+                    <div v-if="editIndex == index" class="card">
+                        <textarea @keydown.enter="editIndex = -1" v-model="card.front"></textarea>
+                    </div>
+                    <div v-else @click="editIndex = index" class="card" v-text="card.front"></div>
+                    <div class="card" v-html="card.back"></div>
                 </div>
-                <div v-else @click="editIndex = index" class="card" v-text="card.front"></div>
-                <div class="card" v-html="card.back"></div>
             </div>
         </div>
 
@@ -26,7 +31,13 @@
                 data() {
                     return {
                         cards,
-                        editIndex: -1
+                        editIndex: -1,
+                        fontSize: 15,
+                        textSizeControls: {
+                            textAlign: 'center',
+                            padding: '20px',
+                            cursor: 'pointer'
+                        }
                     };
                 },
             };
